# research-templates

./: .gitattributes  README.md
Cmake/: README.md
Cmake/src/: CMakeLists.txt
Cmake/src/code/: CMakeLists.txt
Cmake/src/code/Main/: CMakeLists.txt
Cmake/src/code/Scripts/: CMakeLists.txt  helloworld.sh
HKU/thesis/: .gitignore  Makefile  abstract.tex  conclusion.tex  content.tex  draft.tex  final.tex  introduction.tex  macros.tex  note.tex  note_2017.tex  package.tex  paper.bib  symbols.tex  thesis.tex
HKU/thesis/Latex/Classes/: PhDbiblio-url2.bst  PhDthesisPSnPDF.cls
HKU/thesis/matters/: acknowledgement.tex  declaration.tex
SIGGRAPH/: Makefile  abstract.tex  acmsiggraph.cls  conclusion.tex  dart_throw_alg.tex  example_fig.tex  interface.tex  introduction.tex  macros.tex  method.tex  note.tex  package.tex  paper.bib  paper.tex  prior.tex  result.tex  symbols.tex
TOG/: .gitignore  acmart.cls  ccs.tex  copyright.tex  draft.tex  example_fig.tex  final.tex  graphicspath.tex  macros.tex  package.tex  paper.tex  teaser_fig.tex  title_author.tex  tog.tex
